--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "devDependencies": {
     "async": "~0.9.0",
     "chromedriver": "^2.21.2",
+    "cryptiles": "^4.1.3",
+    "hawk": "^7.0.10",
+    "growl": "^1.10.5",
     "crx": "^0.4.4",
     "eslint": "^5.7.0",
     "event-stream": "3.3.4",
